# bridge

./: .dockerignore  .gitmodules  Bridge.cc  CMakeLists.txt  CardServer.cc  Dockerfile  Doxyfile  Doxyfile.in  Main.cc  Pipfile  README.md  Signals.hh  requirements.in  requirements.txt
cmake/: FindJson.cmake  FindLibTMCG.cmake  FindZeroMQ.cmake
img/: clientserver.txt  peertopeer.txt
include/: Blob.hh  BlobMap.hh  Enumerate.hh  FunctionObserver.hh  FunctionQueue.hh  Future.hh  HexUtility.hh  IoUtility.hh  Logging.hh  Observer.hh  Signals.hh  Thread.hh  Utility.hh  Zip.hh
include/bridge/: AllowedCalls.hh  AllowedCards.hh  BasicBidding.hh  BasicHand.hh  BasicPlayer.hh  BasicTrick.hh  Bid.hh  BidIterator.hh  Bidding.hh  BridgeConstants.hh  BridgeGame.hh  Call.hh  CallIterator.hh  Card.hh  CardShuffle.hh  CardType.hh  CardTypeIterator.hh  CardsForPosition.hh  Contract.hh  Deal.hh  DealResult.hh  DealState.hh  DuplicateScoring.hh  GameState.hh  Hand.hh  HandBase.hh  Partnership.hh  Player.hh  Position.hh  Random.hh  RevealableCard.hh  SimpleCard.hh  Trick.hh  TricksWon.hh  Uuid.hh  UuidGenerator.hh  Vulnerability.hh
include/cardserver/: CardServerMain.hh  Commands.hh  PeerEntry.hh
include/coroutines/: AsynchronousExecutionPolicy.hh  CoroutineAdapter.hh  Future.hh  Lock.hh
include/csmain/: CardServerMain.hh  PeerSocketProxy.hh
include/engine/: BridgeEngine.hh  CardManager.hh  DuplicateGameManager.hh  (+4 more)
python/: CMakeLists.txt  README  bridge_gui.py  setup.py.in  test_card_server.py
python/bridgegui/: CMakeLists.txt  __main__.py  bidding.py  cards.py  config.py  main.py  messaging.py  positions.py  score.py  tricks.py  util.py
python/tests/: test_bidding.py  test_cards.py  test_config.py  test_messaging.py  test_score.py
sample/: config.lua
src/: Boilerplate.cc  Bridge.cc  CMakeLists.txt  CardServer.cc  Logging.cc  Signals.cc  Thread.cc
src/bridge/: BasicBidding.cc  BasicHand.cc  BasicPlayer.cc  BasicTrick.cc  Bid.cc  BidIterator.cc  Bidding.cc  BridgeGame.cc  CMakeLists.txt  Call.cc  CallIterator.cc  Card.cc  CardShuffle.cc  CardType.cc  CardTypeIterator.cc  Contract.cc  Deal.cc  DealResult.cc  DealState.cc  DuplicateScoring.cc  GameState.cc  Hand.cc  HandBase.cc  Partnership.cc  Player.cc  Position.cc  Random.cc  RevealableCard.cc  SimpleCard.cc  Trick.cc  TricksWon.cc  UuidGenerator.cc  Vulnerability.cc
src/bridge_/: Contract.cc  DealState.cc  Player.cc  Position.cc  TricksWon.cc
src/cardserver/: CMakeLists.txt  CardServerMain.cc  Commands.cc  PeerEntry.cc
src/coroutines/: AsynchronousExecutionPolicy.cc  CMakeLists.txt  CoroutineAdapter.cc  Future.cc  Lock.cc
src/csmain/: CMakeLists.txt  CardServerMain.cc  PeerSocketProxy.cc
src/engine/: BridgeEngine.cc  CMakeLists.txt  CardManager.cc  DuplicateGameManager.cc  GameManager.cc  MakeDealState.cc  MakeGameState.cc  SimpleCardManager.cc
src/main/: BridgeController.cc  BridgeGame.cc  BridgeGameConfig.cc  BridgeGameInfo.cc  BridgeGameRecorder.cc  BridgeMain.cc  CMakeLists.txt  CallbackScheduler.cc  CardProtocol.cc  CardServerProxy.cc  CommandInterpreter.cc  Commands.cc  Config.cc  GameStateHelper.cc  GetMessageHandler.cc  NodeControl.cc  NodePlayerControl.cc  PeerClientControl.cc  PeerCommandSender.cc  PeerlessCardProtocol.cc  SimpleBridgeController.cc  SimpleCardProtocol.cc
src/messaging/: Authenticator.cc  BidJsonSerializer.cc  CMakeLists.txt  CallJsonSerializer.cc  CallbackScheduler.cc  CardTypeJsonSerializer.cc  ContractJsonSerializer.cc  DealStateJsonSerializer.cc  DuplicateResultJsonSerializer.cc  DuplicateScoreJsonSerializer.cc  DuplicateScoreSheetJsonSerializer.cc  EndpointIterator.cc  Identity.cc  JsonSerializerUtility.cc  MessageHandler.cc  MessageLoop.cc  MessageQueue.cc  PartnershipJsonSerializer.cc  PeerEntryJsonSerializer.cc  Poller.cc  PollingCallbackScheduler.cc  PositionJsonSerializer.cc  Replies.cc  Security.cc  SynchronousExecutionPolicy.cc  TricksWonJsonSerializer.cc  UuidJsonSerializer.cc  VulnerabilityJsonSerializer.cc
src/scoring/: CMakeLists.txt  DuplicateScore.cc  DuplicateScoreSheet.cc  DuplicateScoring.cc
test/: CMakeLists.txt
test/python/: CMakeLists.txt  test_card_server.py  test_score.py
test/python/bridgegui/: CMakeLists.txt  test_bidding.py  test_cards.py  test_messaging.py  test_score.py  test_tricks.py  test_util.py
test/src/: CMakeLists.txt  TestMain.cc
test/src/bridge/: CMakeLists.txt  TestAllowedCalls.cc  TestAllowedCards.cc  TestBasicBidding.cc  TestBasicHand.cc  TestBasicPlayer.cc  TestBasicTrick.cc  TestBid.cc  TestBidding.cc  TestBridgeGame.cc  TestCall.cc  TestCard.cc  TestCardType.cc  TestDeal.cc  TestDuplicateScoring.cc  TestFunctionQueue.cc  TestHand.cc  TestHandBase.cc  TestHexUtility.cc  TestLogging.cc  TestObserver.cc  TestPlayer.cc  TestPosition.cc  TestRevealableCard.cc  TestSimpleCard.cc  TestTrick.cc  TestVulnerability.cc
test/src/coroutines/: CMakeLists.txt  TestAsynchronousExecutionPolicy.cc  TestCoroutineAdapter.cc
test/src/csmain/: CMakeLists.txt  TestPeerSocketProxy.cc
test/src/engine/: CMakeLists.txt  DealState.cc  MakeDealState.cc  TestBridgeEngine.cc  TestCardManager.cc  TestDuplicateGameManager.cc  TestGameManager.cc  TestSimpleCardManager.cc
test/src/main/: CMakeLists.txt  TestBridgeController.cc  TestBridgeGameInfo.cc  TestBridgeGameRecorder.cc  TestCallbackScheduler.cc  TestCardProtocol.cc  TestCardServerProxy.cc  TestCommandInterpreter.cc  TestConfig.cc  TestGameStateHelper.cc  TestGetMessageHandler.cc  TestNodeControl.cc  TestNodePlayerControl.cc  TestPeerClientControl.cc  TestPeerCommandSender.cc  TestPeerlessCardProtocol.cc  TestSimpleCardProtocol.cc
test/src/messaging/: CMakeLists.txt  TestAuthenticator.cc  TestCallbackScheduler.cc  TestDispatchingMessageHandler.cc  TestEndpointIterator.cc  TestFunctionMessageHandler.cc  TestJsonSerializer.cc  TestJsonSerializerUtility.cc  TestMessageBuffer.cc  TestMessageHandler.cc  TestMessageLoop.cc  TestMessageQueue.cc  TestPoller.cc  TestPollingCallbackScheduler.cc  TestSecurity.cc
test/src/scoring/: CMakeLists.txt  TestDuplicateScoreSheet.cc  TestDuplicateScoring.cc
(+85 files in other folders)
